crates/did/src/web/snapshots/vercre_did__web__resolver__test__document.snap
---
source: crates/did/src/web/resolver.rs
assertion_line: 148
expression: resolved.document
---
{
  "@context": [
    "https://www.w3.org/ns/did/v1",
    "https://w3id.org/security/data-integrity/v1"
  ],
  "id": "did:web:demo.credibil.io",
  "verificationMethod": [
    {
      "id": "did:web:demo.credibil.io#key-0",
      "controller": "did:web:demo.credibil.io",
      "type": "JsonWebKey",
      "publicKeyJwk": {
        "kty": "EC",
        "alg": null,
        "crv": "ES256K",
        "x": "H846FVf9umFYyRrEvC5uQa-__2sKLW9H3O89THClFm4",
        "y": "VoMVEnKQsKNtu_sS20M0LPUR5yYEQz4YxUq4hQaQIzQ"
      }
    }
  ],
  "authentication": [
    "did:web:demo.credibil.io#key-0"
  ],
  "assertionMethod": [
    "did:web:demo.credibil.io#key-0"
  ],
  "keyAgreement": [
    {
      "id": "did:web:demo.credibil.io#key-1",
      "controller": "did:web:demo.credibil.io",
      "type": "JsonWebKey",
      "publicKeyJwk": {
        "kty": "EC",
        "alg": null,
        "crv": "ES256K",
        "x": "H846FVf9umFYyRrEvC5uQa-__2sKLW9H3O89THClFm4",
        "y": "VoMVEnKQsKNtu_sS20M0LPUR5yYEQz4YxUq4hQaQIzQ"
      }
    }
  ],
  "capabilityInvocation": [
    "did:web:demo.credibil.io#key-0"
  ],
  "capabilityDelegation": [
    "did:web:demo.credibil.io#key-0"
  ]
}
